Add get_distance_google.py script for distance calculation

--- a/notebooks/explo_donnees_rh.ipynb
+++ b/notebooks/explo_donnees_rh.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "f55c0567",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "<module 'my_functions' from \"c:\\\\Users\\\\Maeva\\\\Documents\\\\OpenClassRoom\\\\P12 - Gérer un projet d'infrastructure\\\\notebooks\\\\my_functions.py\">"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "fe04c1f6",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "1284d7e6",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "(161, 11)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "c979c0a2",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "4                 Marche/running  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "064ad669",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "ce82eec2",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "ae2d7e53",
    "metadata": {},
    "outputs": [
@@ -458,7 +458,7 @@
        "4                 Marche/running  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "ce29f136",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "b01295b1",
    "metadata": {},
    "outputs": [
@@ -671,7 +671,7 @@
        "mode_deplacement          0    0.0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "3f563ed9",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "688ba2aa",
    "metadata": {},
    "outputs": [
@@ -747,7 +747,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "id": "c6eb0087",
    "metadata": {},
    "outputs": [
@@ -771,7 +771,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "id": "8e3f4e06",
    "metadata": {},
    "outputs": [
@@ -798,7 +798,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "id": "37adf596",
    "metadata": {},
    "outputs": [
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "id": "fc7662ba",
    "metadata": {},
    "outputs": [
@@ -877,7 +877,7 @@
        "Name: salaire_brut, dtype: float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "id": "32c7a852",
    "metadata": {},
    "outputs": [],
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "id": "14653545",
    "metadata": {},
    "outputs": [
@@ -932,7 +932,7 @@
        "(161, 2)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "id": "e5fb31c8",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1011,7 @@
        "4       81001                 NaN"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "id": "0d3feaa5",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "id": "b674011a",
    "metadata": {},
    "outputs": [],
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "id": "fc7af265",
    "metadata": {},
    "outputs": [
@@ -1139,7 +1139,7 @@
        "4       81001               NaN"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "id": "f10906ea",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1168,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "id": "0435cfd6",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1253,7 @@
        "pratique_sportive         66  40.99  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "id": "cf700c70",
    "metadata": {},
    "outputs": [
@@ -1286,7 +1286,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "id": "ecbd7820",
    "metadata": {},
    "outputs": [
@@ -1331,7 +1331,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "id": "96d71095",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1368,7 @@
        "(161, 12)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "id": "879d3ca5",
    "metadata": {},
    "outputs": [
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "id": "c9e72aa7",
    "metadata": {},
    "outputs": [
@@ -1555,7 +1555,7 @@
        "4                 Marche/running               NaN  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "id": "e6aae078",
    "metadata": {},
    "outputs": [
@@ -1684,7 +1684,7 @@
        "11  pratique_sportive  Catégorielle"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "id": "1b951519",
    "metadata": {},
    "outputs": [
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "id": "e6e66381",
    "metadata": {},
    "outputs": [
@@ -1825,17 +1825,17 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\Maeva\\Documents\\OpenClassRoom\\P12 - Gérer un projet d'infrastructure\\notebooks\\my_functions.py:195: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
-      "  results.append((col1, col2, p, None))\n",
+      "  normality_check = [shapiro(group)[1] > 0.05 for group in valid_groups]\n",
       "c:\\Users\\Maeva\\Documents\\OpenClassRoom\\P12 - Gérer un projet d'infrastructure\\notebooks\\my_functions.py:195: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
-      "  results.append((col1, col2, p, None))\n",
+      "  normality_check = [shapiro(group)[1] > 0.05 for group in valid_groups]\n",
       "c:\\Users\\Maeva\\Documents\\OpenClassRoom\\P12 - Gérer un projet d'infrastructure\\notebooks\\my_functions.py:195: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
-      "  results.append((col1, col2, p, None))\n",
+      "  normality_check = [shapiro(group)[1] > 0.05 for group in valid_groups]\n",
       "c:\\Users\\Maeva\\Documents\\OpenClassRoom\\P12 - Gérer un projet d'infrastructure\\notebooks\\my_functions.py:195: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
-      "  results.append((col1, col2, p, None))\n",
+      "  normality_check = [shapiro(group)[1] > 0.05 for group in valid_groups]\n",
       "c:\\Users\\Maeva\\Documents\\OpenClassRoom\\P12 - Gérer un projet d'infrastructure\\notebooks\\my_functions.py:195: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
-      "  results.append((col1, col2, p, None))\n",
+      "  normality_check = [shapiro(group)[1] > 0.05 for group in valid_groups]\n",
       "c:\\Users\\Maeva\\Documents\\OpenClassRoom\\P12 - Gérer un projet d'infrastructure\\notebooks\\my_functions.py:195: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
-      "  results.append((col1, col2, p, None))\n"
+      "  normality_check = [shapiro(group)[1] > 0.05 for group in valid_groups]\n"
      ]
     },
     {
@@ -1990,7 +1990,7 @@
        "[66 rows x 5 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2001,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 34,
    "id": "eac7f741",
    "metadata": {},
    "outputs": [
@@ -2030,12 +2030,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 35,
    "id": "1d2c6a77",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_merged.to_csv(\"../data/donnees_rh_clean.csv\", index=False)"
+    "df_merged.to_csv(\"../data/donnees_rh_clean.csv\", sep=';', index=False)"
    ]
   }
  ],
